--- a/public/css/main.css
+++ b/public/css/main.css
@@ -20,6 +20,9 @@
     font-family:  AvenirNext Azeri Light;
     src: url(./../fonts/AvenirNextAzeri-Light.woff);
 }
+/* html {
+    scroll-behavior: smooth;
+} */
 body{
     font-family: AvenirNext Azeri , 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     transition: all 0.3s;
@@ -923,6 +926,8 @@ li {
 }
 .case_studies_item_img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 .case_studies_content_item_desc {
     display: flex;
@@ -2183,6 +2188,7 @@ li {
 .filter_content_item_img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 .filter_content_item_desc {
     display: flex;
@@ -2916,9 +2922,9 @@ input.about_yourself_content_form_control {
     overflow: hidden;
 }
 .header_content_img img {
-    min-height: 100%;
-    min-width: 100%;
-    /* height: 100%; */
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 .header_content_text {
     display: flex;
@@ -3363,7 +3369,8 @@ input.about_yourself_content_form_control {
 }
 .hardwareDistribution_content_left_body{
     display: flex;
-    align-items: center;
+    align-items: flex-start;
+    margin-top: 80px;
     height: 100%;
 }
 .hardwareDistribution_content_left_desc{
