--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2991,9 +2991,9 @@ input.about_yourself_content_form_control {
     overflow: hidden;
 }
 .BI_system_header_img img {
-    min-height: 100%;
-    min-width: 100%;
-    /* height: 100%; */
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 .BI_system_header_text {
     display: flex;
@@ -3007,8 +3007,8 @@ input.about_yourself_content_form_control {
     padding: 30px 65px 80px;
 }
 .BI_system_header_text .overlay {
-    height: 50%;
-    top: 50%;
+    height: 70%;
+    top: 30%;
     background-color: unset;
     background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
     opacity: 0.5;
