reduce image size

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3532,3 +3532,11 @@ input.about_yourself_content_form_control {
     margin-bottom: 20px;
 }
 /* hardwareDistribution finished */
+
+
+/* Partner start */
+.partner{
+    padding: 50px 70px;
+}
+
+/* Partner finished */
