--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -302,6 +302,16 @@
         flex-direction: column;
         padding: 0px 0px 25px 0px;
     }
+    
+    .banner_content_mobile_item_title{
+        font-size: 30px;
+        line-height: 35px;
+
+    }
+
+    .btn{
+        padding: 10px 15px;
+    }
 
     /* banner finish */
 
@@ -330,9 +340,10 @@
     .case_studies_content_item_desc p{
         font-size: 14px;
         line-height: 16px;
+        padding: 10px 0 5px 0;
     }
     .case_studies_footer{
-        padding: 15px 0px;
+        padding: 15px 0;
     }
     .case_studies_arrow{
         padding: 5px 8px;
